--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.5.0",
   "private": true,
   "dependencies": {
+    "@babel/helper-builder-react-jsx": "^7.15.4",
     "@babel/helper-define-map": "^7.15.4",
     "axios": "^0.19.0",
+    "babel-loader": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1"
